[package]
name = "monoku-client"
version = "0.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

[features]
default = ["std"]
std = []

[lints]
workspace = true
