[package]
name = "monoku-utils"
version = "0.0.0"             # Remember to update the version in workspace Cargo.toml
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

[lints]
workspace = true
